FIX: fixed page header variable spacing  bug

--- a/app/Components/PageHeader/PageHeader.module.css
+++ b/app/Components/PageHeader/PageHeader.module.css
@@ -1,7 +1,7 @@
 .headerTitle {
 	letter-spacing: -0.144rem;
 	font-size: 3.2rem;
-	font-weight: 700;
+	font-weight: 600;
 	color: var(--mantine-color-brand-6);
 	display: block;
 	position: relative;
